# universal-remote-simulator

./: .gitignore  LATENCY_CHECKLIST.md  LATENCY_SUMMARY.md  LICENSE  Makefile  README.md  START_HERE.md
test_simulator/: .gitignore  3D_UI_FEATURES.md  ANIMATION_FEATURES.md  API.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  IR_VISUALIZATION_GUIDE.md  KEYBOARD_SHORTCUTS.md  QUICK_START.md  QUICK_START_WEB.md  QUICK_TEST.md  README.md  README_POETRY.md  README_TESTS.md  RUN_NOW.md  SERVER_STARTED.md  SETUP.md  STREAMING_ANIMATIONS.md  STREAMING_API.md  STREAMING_TEST_GUIDE.md  STREAMING_TEST_README.md  TESTING.md  TEST_REPORT.md  VERIFY_SETUP.py  WEB_README.md  WSL_SETUP.md  autonomous_config.json  brand_detection.py  button_codes.py  ipc_server.py  ir_synthetic.py  main.py  presets_loader.py  protocol_classifier.py  pyproject.toml  pytest.ini  requirements.txt  run_simulator.bat  run_simulator.sh  run_web_server.bat  (+8 more)
test_simulator/docs/: HOME_ASSISTANT_NODE_RED.md  SERVICE_AND_AUTOMATION.md
test_simulator/tests/: __init__.py  conftest.py  test_all_buttons.py  test_api.py  test_brand_detection.py  test_environment.py  test_functional.py  test_ir_synthetic.py  test_planned.py  test_protocol_classifier.py  test_remote_visual.py  test_system.py  test_unit.py
test_simulator/tests_archive/: README.md  test_channel_tv_shows.py  test_standalone.py  test_streaming_auto.py  test_streaming_simple.py
test_simulator/web_static/js/: ir-visualization.js  tv-simulator.js
test_simulator/web_static/js/simulator/: README.md  animations.js  (+12 more)
test_simulator/web_templates/: index.html
(+45 files in other folders)
